--- a/Final Project/currentnews.html
+++ b/Final Project/currentnews.html
@@ -15,7 +15,9 @@
     <!-- Keywords relevant to web page content -->
     <meta name="keywords" content="Pokemon, news, game" />
     <!-- Link external CSS file to style and format web page !-->
+    <!-- Link to primary stylesheet !-->
     <link rel="stylesheet" href="stylesheet/main.css">
+    <!-- Link to page specific stylesheet !-->
     <link rel="stylesheet" href="stylesheet/current.css">
     <!-- Link external JS file for user interactivity !-->
     <!-- Defer ensures DOM is fully loaded before JS scripts are executed -->
