--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -15,6 +15,7 @@
     <!-- Keywords relevant to web page content -->
     <meta name="keywords" content="Pokemon, news, game" />
     <!-- Link external CSS file to style and format web page !-->
+    <!-- Link to primary stylesheet !-->
     <link rel="stylesheet" href="stylesheet/main.css">
     <!-- Link external JS file for user interactivity !-->
     <!-- Defer ensures DOM is fully loaded before JS scripts are executed -->
