--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -25,7 +25,7 @@
     <!-- Link jQuery's CDN used for accessibility dropdown menu -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Inform user of current page within site structure: shown on web page's tab -->
-    <title>Paldea Times | Current News</title>
+    <title>Paldea Times | Report</title>
 </head>
 
 <!-- Body section contains the structure for all visible content
@@ -117,7 +117,16 @@
     </header>
 
     <main>
-
+        <h1 id="main-page-title-center">Report</h1>
+        <h2>Introduction</h2>
+        <h2>Inspiration</h2>
+        <h2>Acessibility</h2>
+        <h2>Usability</h2>
+        <h2>Learning Outcome</h2>
+        <h2>What Worked Well</h2>
+        <h2>What Didn't Work</h2>
+        <h2>Resources</h2>
+        <h2>Appendix</h2>
     </main>
 
     <!-- Footer section
