--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -121,7 +121,7 @@
         <h2>Introduction</h2>
         <h3>Purpose</h3>
         <p>I believe this is rather self explanatory. The goal of the website is to promote ninth generation Pokemon game set in Paldea and provide coverage of events happening around the game.
-            This is not limited to in game event, official event or community related such as donation drive. The target demographics ranged from people who have heard of the game but actually play it to
+            This is not limited to in game event, official event or community related such as donation drive. The target demographics ranged from people who have heard of the game but don't play it to
             veterans. As mentioned in "About Us", this generation of Pokemon game is perfect for people who hates the grind but love competitive PvP as most of the grind can be easily skipped with items easily obtained in game.
         </p>
         <h3>Structure</h3>
@@ -132,10 +132,11 @@
 
             "Raid Guide" and "About Paldea" are inspired by old design of wikipedia webpages and article pages that usually only use the center part of the space and leave the sides blank. <br/>
 
-            I didn't put much thought for "About Us" page. I just want to get things done.
+            More details about the inspiration source of the structure would be explained in the next section.
         </p>
         <h2>Inspiration</h2>
         <h3>Kotaku</h3>
+
         <h3>Gamewith</h3>
         <h3>WCAG Accessibility Standards</h3>
         <p>
