--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -14,13 +14,15 @@
     <meta name="author" content="Chiuchiyin" />
     <!-- Keywords relevant to web page content -->
     <meta name="keywords" content="Pokemon, news, game" />
-    <!-- Link external CSS file to style and format web page !-->
-    <!-- Link to primary stylesheet !-->
+    <!-- Link external CSS file to style and format web page -->
+    <!-- Link to primary stylesheet -->
     <link rel="stylesheet" href="stylesheet/main.css">
-    <!-- Link external JS file for user interactivity !-->
+    <!-- Link to page specific stylesheet -->
+    <link rel="stylesheet" href="stylesheet/report.css">
+    <!-- Link external JS file for user interactivity -->
     <!-- Defer ensures DOM is fully loaded before JS scripts are executed -->
     <script src="scripts/scripts.js" defer></script>
-    <!-- Link third party library to provide different font families !-->
+    <!-- Link third party library to provide different font families -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Link jQuery's CDN used for accessibility dropdown menu -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -70,10 +72,10 @@
             </nav>
 
             <!-- Scroll to top button
-                Becomes visible once the user has scrolled down to a certain point on the page !-->
+                Becomes visible once the user has scrolled down to a certain point on the page -->
 
             <nav>
-                <!-- Up arrow icon from imported library !-->
+                <!-- Up arrow icon from imported library -->
                 <button class="back-to-top-button">
                     <i class="fas fa-caret-up"></i>
                 </button>
@@ -135,8 +137,11 @@
             More details about the inspiration source of the structure would be explained in the next section.
         </p>
         <h2>Inspiration</h2>
+        <p>Barring some of the previous years submission (because otherwise I don't know what to and what is expected), these are the main source of inspiration.</p>
         <h3>Kotaku</h3>
-
+        <p>
+            While I often find the articles published disagreeable, I find the layout of the website rather appealing. In fact, the design of "Home Page" and "Current News" are based on Kotaku.
+        </p>
         <h3>Gamewith</h3>
         <h3>WCAG Accessibility Standards</h3>
         <p>
