--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -119,41 +119,52 @@
     </header>
 
     <main>
-        <h1 id="main-page-title-center">Report</h1>
-        <h2>Introduction</h2>
-        <h3>Purpose</h3>
-        <p>I believe this is rather self explanatory. The goal of the website is to promote ninth generation Pokemon game set in Paldea and provide coverage of events happening around the game.
-            This is not limited to in game event, official event or community related such as donation drive. The target demographics ranged from people who have heard of the game but don't play it to
-            veterans. As mentioned in "About Us", this generation of Pokemon game is perfect for people who hates the grind but love competitive PvP as most of the grind can be easily skipped with items easily obtained in game.
-        </p>
-        <h3>Structure</h3>
-        <p>
-            The first two page "Home Page" and "Curent News" are made to look like magazine to fit the given task. 
-            Both page have slightly different format, with the "Home Page" denser like newspaper or magazine home page while "Current News" page is simpler version with "flash news" card added on the side.
-            A lot of time were spent thinking how to make it not too dense and overload the page. This was the structure I came with after looking at more websites. <br/>
+        <section class="report">
+            <h1 id="main-page-title-center">Report</h1>
+            <h2>Introduction</h2>
+            <h3>Purpose</h3>
+            <p>I believe this is rather self explanatory. The goal of the website is to promote ninth generation Pokemon
+                game set in Paldea and provide coverage of events happening around the game.
+                This is not limited to in game event, official event or community related such as donation drive. The
+                target demographics ranged from people who have heard of the game but don't play it to
+                veterans. As mentioned in "About Us", this generation of Pokemon game is perfect for people who hates
+                the grind but love competitive PvP as most of the grind can be easily skipped with items easily obtained
+                in game.
+            </p>
+            <h3>Structure</h3>
+            <p>
+                The first two page "Home Page" and "Curent News" are made to look like magazine to fit the given task.
+                Both page have slightly different format, with the "Home Page" denser like newspaper or magazine home
+                page while "Current News" page is simpler version with "flash news" card added on the side.
+                A lot of time were spent thinking how to make it not too dense and overload the page. This was the
+                structure I came with after looking at more websites. <br />
 
-            "Raid Guide" and "About Paldea" are inspired by old design of wikipedia webpages and article pages that usually only use the center part of the space and leave the sides blank. <br/>
+                "Raid Guide" and "About Paldea" are inspired by old design of wikipedia webpages and article pages that
+                usually only use the center part of the space and leave the sides blank. <br />
 
-            More details about the inspiration source of the structure would be explained in the next section.
-        </p>
-        <h2>Inspiration</h2>
-        <p>Barring some of the previous years submission (because otherwise I don't know what to and what is expected), these are the main source of inspiration.</p>
-        <h3>Kotaku</h3>
-        <p>
-            While I often find the articles published disagreeable, I find the layout of the website rather appealing. In fact, the design of "Home Page" and "Current News" are based on Kotaku.
-        </p>
-        <h3>Gamewith</h3>
-        <h3>WCAG Accessibility Standards</h3>
-        <p>
+                More details about the inspiration source of the structure would be explained in the next section.
+            </p>
+            <h2>Inspiration</h2>
+            <p>Barring some of the previous years submission (because otherwise I don't know what to do and what is
+                expected), these are the main source of inspiration.</p>
+            <h3>Kotaku</h3>
+            <p>
+                While I often find the articles published disagreeable, I find the layout of the website rather
+                appealing. In fact, the design of "Home Page" and "Current News" are partially based on Kotaku.
+            </p>
+            <h3>Gamewith</h3>
+            <h3>WCAG Accessibility Standards</h3>
+            <p>
 
-        </p>
-        <h2>Acessibility</h2>
-        <h2>Usability</h2>
-        <h2>Learning Outcome</h2>
-        <h2>What Worked Well</h2>
-        <h2>What Didn't Work</h2>
-        <h2>Resources</h2>
-        <h2>Appendix</h2>
+            </p>
+            <h2>Acessibility</h2>
+            <h2>Usability</h2>
+            <h2>Learning Outcome</h2>
+            <h2>What Worked Well</h2>
+            <h2>What Didn't Work</h2>
+            <h2>Resources</h2>
+            <h2>Appendix</h2>
+        </section>
     </main>
 
     <!-- Footer section
