--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -135,7 +135,7 @@
             <p>
                 The first two page "Home Page" and "Curent News" are made to look like magazine to fit the given task.
                 Both page have slightly different format, with the "Home Page" denser like newspaper or magazine home
-                page while "Current News" page is simpler version with "flash news" card added on the side.
+                page while "Current News" page is simpler version with "Flash News" card added on the side.
                 A lot of time were spent thinking how to make it not too dense and overload the page. This was the
                 structure I came with after looking at more websites. <br />
 
@@ -145,17 +145,57 @@
                 More details about the inspiration source of the structure would be explained in the next section.
             </p>
             <h2>Inspiration</h2>
-            <p>Barring some of the previous years submission (because otherwise I don't know what to do and what is
+            <p>Barring some of the past years submission (because otherwise I don't know what to do and what is
                 expected), these are the main source of inspiration.</p>
             <h3>Kotaku</h3>
             <p>
                 While I often find the articles published disagreeable, I find the layout of the website rather
                 appealing. In fact, the design of "Home Page" and "Current News" are partially based on Kotaku.
+                The top part of the "Home Page" is designed after Kotaku "Home Page" with "Featured News" on the left,
+                occupying roughly the same space as 4 articles on the right. Having larger portion for "featured
+                section" brings more attention to it.
+            </p><br />
+            <figure>
+                <img src="report/kotaku-home-page-desktop.jpg" alt="Kotaku Home Page">
+                <figcaption>Kotaku Home Page</figcaption>
+            </figure><br />
+            <p>Below "Featured News" there are two articles, that is where the idea for "Current news" section come
+                from, combined with "Popular News" flash card on "Latest News" page which I repurposed as text only
+                "Breaking News".
+            </p><br />
+            <figure>
+                <img src="report/kotaku-latest-desktop.jpg" alt="Kotaku Latest News Page">
+                <figcaption>Kotaku Latest News Page</figcaption>
+            </figure><br />
+            <p>
+                I will give a more detailed breakdown on the thought process in the appendix.
             </p>
             <h3>Gamewith</h3>
+            <p>
+                Gamewith is a Japanese gaming site. Although it also provide content in English sometimes translation
+                artefacts are still remaining. A typical Gamewith page usually has a centered fixed size container
+                divided into two unequal column with the left side containing the main article and the right side having
+                contents that link to other articles, advertisement and even link to other games. I decided to not
+                replicate their right side because I find it rather distracting. So I only have the main article body
+                for "Raid Guide" and "About Paldea" page. Another thing that I tried to replicate from Gamewith was the
+                filter buttons. Which you can access by clicking <a
+                    href="https://gamewith.net/pokemon-scarletviolet/article/show/37197">here</a>.
+            </p><br />
+            <figure>
+                <img src="report/gamewith-raid-filter.jpg" alt="Gamewith Raid Guide">
+                <figcaption>Gamewith Raid Guide</figcaption>
+            </figure><br />
             <h3>WCAG Accessibility Standards</h3>
             <p>
+                Thinking about web accesibility is a headache, WCAG Accessibility Standards provided a guideline what
+                could be done to make website accessible.<br />
 
+                From the start of the project, making the website accessible to people with disablity is kept in mind.
+                For example, to make sure that the website is accessible, we keep the colour scheme as simple as
+                possible with mostly in the grayscale. This would make it easier for colour blind individuals. The
+                implementation of a contrast toggling button took colour contrast compliance into account, with a low
+                contrast mode that caters to dyslexic individuals. It also help to reduce eye strain. We would elaborate
+                more on this in the next section.
             </p>
             <h2>Acessibility</h2>
             <h2>Usability</h2>
