--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -130,7 +130,7 @@
                 veterans. As mentioned in "About Us", this generation of Pokemon game is perfect for people who hates
                 the grind but love competitive PvP as most of the grind can be easily skipped with items easily obtained
                 in game.
-            </p>
+            </p><br />
             <h3>Structure</h3>
             <p>
                 The first two page "Home Page" and "Curent News" are made to look like magazine to fit the given task.
@@ -143,7 +143,7 @@
                 usually only use the center part of the space and leave the sides blank. <br />
 
                 More details about the inspiration source of the structure would be explained in the next section.
-            </p>
+            </p><br />
             <h2>Inspiration</h2>
             <p>Barring some of the past years submission (because otherwise I don't know what to do and what is
                 expected), these are the main source of inspiration.</p>
@@ -169,17 +169,17 @@
             </figure><br />
             <p>
                 I will give a more detailed breakdown on the thought process in the appendix.
-            </p>
+            </p><br />
             <h3>Gamewith</h3>
             <p>
-                Gamewith is a Japanese gaming site. Although it also provide content in English sometimes translation
+                Gamewith is a Japanese gaming site. Although it also provide content in English, sometimes translation
                 artefacts are still remaining. A typical Gamewith page usually has a centered fixed size container
                 divided into two unequal column with the left side containing the main article and the right side having
-                contents that link to other articles, advertisement and even link to other games. I decided to not
+                contents that link to other articles, advertisement and even links to other games. I decided to not
                 replicate their right side because I find it rather distracting. So I only have the main article body
                 for "Raid Guide" and "About Paldea" page. Another thing that I tried to replicate from Gamewith was the
-                filter buttons. Which you can access by clicking <a
-                    href="https://gamewith.net/pokemon-scarletviolet/article/show/37197">here</a>.
+                filter buttons at the bottom of "Raid Guide" Page. You can take a look at the original by clicking <a
+                    href="https://gamewith.net/pokemon-scarletviolet/article/show/37197">this link</a>.
             </p><br />
             <figure>
                 <img src="report/gamewith-raid-filter.jpg" alt="Gamewith Raid Guide">
@@ -194,11 +194,59 @@
                 For example, to make sure that the website is accessible, we keep the colour scheme as simple as
                 possible with mostly in the grayscale. This would make it easier for colour blind individuals. The
                 implementation of a contrast toggling button took colour contrast compliance into account, with a low
-                contrast mode that caters to dyslexic individuals. It also help to reduce eye strain. We would elaborate
-                more on this in the next section.
-            </p>
+                contrast mode that caters to dyslexic individuals. We would elaborate more on accesibility in the next
+                section.
+            </p><br />
             <h2>Acessibility</h2>
+            <h3>Accessibility dropdown menu</h3>
+            <p>
+                Wheelchair symbol is used to indicate the accessibility dropdown menu to make it easier to
+                recognise.<br />
+
+                The first accessibility option uses an objectively legible font, Arial to represent all font families on
+                the web page. The purpose of the button is to change fonts used on the webpages, between Serif Fonts and
+                Sans Serif Fonts. There are studies that demonstrate how serif fonts are actually superior to sans serif
+                in many long texts (Arditi & Cho, 2005; Tinker, 1963). And there are studies that support sans serif
+                typefaces as superior for people living with certain disabilities (such as certain visual challenges and
+                those who learn differently; Russell-Minda et al., 2007). Having a toogle button helps us to cater both
+                groups.<br />
+
+                The second accessibility option underlines links on the page. Underlining is traditionally used to
+                indicate link, however this can be easily confused as emphasis which could lead to misunderstanding of
+                intent. Having a toogle button to underline links and not would help people with learning disability and
+                those unfamiliar with technology to identify them.<br />
+
+                The third accessibility option offers a grayscale mode, which removes bright and distracting saturated
+                colours for general users and improves readability for colour-blind users. This further reduces eye
+                strain under low light conditions, especially for dense blocks of text. It is also helpful for users who
+                access the website with e-ink screen devices like Nook or Amazon Paperwhite.<br />
+
+                Each accessibility option button is accompanied by a corresponding high-contrast tooltip that
+                clearly indicates the accessibility feature. This user-triggered GUI element becomes visible when a
+                mouse-hover gesture is detected and provides a brief, temporary description that does not collide with
+                critical main content elements.<br />
+            </p><br />
+            <h3>Contrast toggle button for legibility</h3>
+            <p>
+                Our default colour scheme is a white background with black lettering which is high contrast. Human eyes
+                distinguish the best if white appears on a black background and vice versa. Hence, the contrast ratio
+                should be higher for the eyes to lessen the stress on the eyes. This is ideal for visitors with visual
+                impairments who would find it harder to read at low contrast, such as grey test on a dark grey
+                background.<br />
+
+                Lower contrast on the other hand would benefits those with learning disability. For example, dyslexic
+                individuals could read more efficiently, due to reduced variation in hues, saturation, and brightness.
+            </p>
+            <h3>Back-to-top button to reduce vertical scrolling</h3>
+            <p>
+                Vertical scrolling could be a daunting task for those with motor disability, especially older
+                individuals with Arthritis. Back-to-top button can help people with mobility issues navigate the page
+                more easily, it reduces strain on finger and wrist. It also helps people to save time. The back to top
+                button is especially helpful for people using mobile devices. It decreases the swiping they have to do
+                to get back to the top of a page.
+            </p>
             <h2>Usability</h2>
+            <h3>Introducing a responsive layout and a toggleable hamburger menu to accommodate smaller screen sizes</h3>
             <h2>Learning Outcome</h2>
             <h2>What Worked Well</h2>
             <h2>What Didn't Work</h2>
