--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -241,12 +241,12 @@
             <p>
                 Vertical scrolling could be a daunting task for those with motor disability, especially older
                 individuals with Arthritis. Back-to-top button can help people with mobility issues navigate the page
-                more easily, it reduces strain on finger and wrist. It also helps people to save time. The back to top
+                more easily, it reduces strain on fingers and wrist. It also helps people to save time. The back to top
                 button is especially helpful for people using mobile devices. It decreases the swiping they have to do
                 to get back to the top of a page.
             </p>
             <h2>Usability</h2>
-            <h3>Introducing a responsive layout and a toggleable hamburger menu to accommodate smaller screen sizes</h3>
+            <h3>Responsive layout and a toggleable hamburger menu to accommodate smaller screen sizes</h3>
             <h2>Learning Outcome</h2>
             <h2>What Worked Well</h2>
             <h2>What Didn't Work</h2>
