--- a/Final Project/currentnews.html
+++ b/Final Project/currentnews.html
@@ -290,7 +290,7 @@
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
                                 <img src="images/46px-Pokemon_International_Championship_allmode.png"
-                                alt="Garganacl">
+                                alt="championship symbol">
                             </div>
                             <div class="text">
                                 <p>Gavin Michaels took the title of OCIC 2023 Masters Champion! after beating rival Alberto Lara 2-0<p><br />
@@ -300,7 +300,7 @@
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
                                 <img src="images/46px-Pokemon_International_Championship_allmode.png"
-                                alt="Garganacl">
+                                alt="championship symbol">
                             </div>
                             <div class="text">
                                 <p>In another 2-0 sweep, Benjamin claims victory over Tin Tin to become the Oceania International Seniors Champion!</p><br />
@@ -310,7 +310,7 @@
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
                                 <img src="images/46px-Pokemon_International_Championship_allmode.png"
-                                alt="Garganacl">
+                                alt="championship symbol">
                             </div>
                             <div class="text">
                                 <p>Jiseok Lee's Garganacl will be distributed via code in the Oceania International Championships stream</p><br />
@@ -323,7 +323,7 @@
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
                                 <img src="images/tera-raid.png"
-                                alt="Garganacl">
+                                alt="Tera symbol">
                             </div>
                             <div class="text">
                                 <p>7-Star Tera Raid Battles for Pikachu is now live</p>
@@ -333,7 +333,7 @@
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
                                 <img src="images/tera-raid.png"
-                                alt="Garganacl">
+                                alt="Tera symbol">
                             </div>
                             <div class="text">
                                 <p>Enter the code「1STCHAMPSV」for Jiseok Lee's Garganacl</p>
@@ -343,7 +343,7 @@
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
                                 <img src="images/tera-raid.png"
-                                alt="Garganacl">
+                                alt="Tera symbol">
                             </div>
                             <div class="text">
                                 <p>Tera Raid Battles for Garchomp and Sylveon have ended </p>
@@ -355,8 +355,8 @@
                         <div class="image-text-container">
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
-                                <img src="images/Logo.svg"
-                                alt="Garganacl">
+                                <img src="images/logo.jpg"
+                                alt="company logo">
                             </div>
                             <div class="text">
                                 <p>February Fanart contest is closing soon<p>
@@ -365,8 +365,8 @@
                         <div class="image-text-container">
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
-                                <img src="images/Logo.svg"
-                                alt="Garganacl">
+                                <img src="images/logo.jpg"
+                                alt="company logo">
                             </div>
                             <div class="text">
                                 <p>Join us participating in Catch a Million marathon<p>
@@ -375,8 +375,8 @@
                         <div class="image-text-container">
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
-                                <img src="images/Logo.svg"
-                                alt="Garganacl">
+                                <img src="images/logo.jpg"
+                                alt="company logo">
                             </div>
                             <div class="text">
                                 <p>Registration for March community tournament will be open on 25th<p>
