--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -248,7 +248,25 @@
             <h2>Usability</h2>
             <h3>Responsive layout and a toggleable hamburger menu to accommodate smaller screen sizes</h3>
             <p>
-                
+                The share of global web traffic on mobile phone has soared over the decade. It was a mere 10.88% in 2012
+                and by 2017 it have risen fivefold to 54.09%. Therefore, it is critical to design a website with smaller
+                screen in mind.
+            </p><br />
+            <figure>
+                <img src="report/1662468125-global-mobile-phone-website-traffic-share-from-2012-to-2022.webp"
+                    alt="Global Mobile Phone Traffic Share from 2012 to 2022">
+                <figcaption>Global Mobile Phone Traffic Share from 2012 to 2022</figcaption>
+            </figure><br />
+            <p>
+                The hamburger menu is easily the most recogniseable button in mobile interface. It strategically
+                organize navigation buttons into a single column and improves overall clickability. With the hamburger
+                menu, we can have clean, compact and organized navigation and thus maintain overall readability on
+                smaller screens. Without responsive design to alter our webpage, the navigation button would collide,
+                making it difficult to navigate between pages.<br/>
+
+                Website layout also has to be changed to prevent collision, reduce clutter and maintain readability.
+                This was done by moving sidebar or completely remove them on smaller resolution.
+
             </p>
             <h2>Learning Outcome</h2>
             <h2>What Worked Well</h2>
