--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -262,16 +262,30 @@
                 organize navigation buttons into a single column and improves overall clickability. With the hamburger
                 menu, we can have clean, compact and organized navigation and thus maintain overall readability on
                 smaller screens. Without responsive design to alter our webpage, the navigation button would collide,
-                making it difficult to navigate between pages.<br/>
+                making it difficult to navigate between pages.<br />
 
                 Website layout also has to be changed to prevent collision, reduce clutter and maintain readability.
                 This was done by moving sidebar or completely remove them on smaller resolution.
-
-            </p>
+            </p><br />
+            <h3>Colour Scheme</h3>
+            <p>
+                Colour Scheme choice, header and footer are clean and consistent across all pages, making it easier for
+                visitors to grow familiar and leave a lasting impression. It also help them to not get lost while
+                navigating pages.
+            </p><br />
+            <h3>Timeline</h3>
+            <P>
+                Vertical timeline is a powerful tool to visualize "historical event". I believe the use of vertical
+                timeline helps in understanding the flow of event.
+            </p><br />
             <h2>Learning Outcome</h2>
+            <h3>jQuery</h3>
+            <h3>Animating with CSS</h3>
+            <h3>Web Accessibility</h3>
             <h2>What Worked Well</h2>
             <h3></h3>
-            <h2>What Didn't Work</h2>
+            <h2>What Didn't Work Well</h2>
+            <h3></h3>
             <h2>Resources</h2>
             <h2>Appendix</h2>
         </section>
