--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -280,8 +280,17 @@
             </p><br />
             <h2>Learning Outcome</h2>
             <h3>jQuery</h3>
+            <p>
+                
+            </p>
             <h3>Animating with CSS</h3>
+            <p>
+                Throughout the project, one of the things I have learned is animating with CSS. CSS could be used to transform page elements, such as moving, enlarging, fade, rotation and more complicated animation like swimming koi fish which can be done with help of javascript. For this project, I built an animated vertical timeline.
+            </p>
             <h3>Web Accessibility</h3>
+            <p>
+                
+            </p>
             <h2>What Worked Well</h2>
             <h3></h3>
             <h2>What Didn't Work Well</h2>
