--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -281,16 +281,22 @@
             <h2>Learning Outcome</h2>
             <h3>jQuery</h3>
             <p>
-                
-            </p>
+
+            </p><br />
             <h3>Animating with CSS</h3>
             <p>
-                Throughout the project, one of the things I have learned is animating with CSS. CSS could be used to transform page elements, such as moving, enlarging, fade, rotation and more complicated animation like swimming koi fish which can be done with help of javascript. For this project, I built an animated vertical timeline.
-            </p>
+                Throughout the project, one of the things I have learned is animating with CSS. CSS could be used to
+                transform page elements, such as moving, enlarging, fade, rotation and more complicated animation like
+                swimming koi fish which can be done with help of javascript. For this project, I built an animated
+                vertical timeline.
+            </p><br />
             <h3>Web Accessibility</h3>
             <p>
-                
-            </p>
+                Web accessibility is kept in mind from the start. I read through WCAG Accessibility Standards and asked
+                around people in the industry what I should consider. The idea from that was to make the webpage
+                colour-blind friendly and reduce mouse use as much as possible. From there we went on with legibility,
+                underlining, grayscale filter and contras toggle button.
+            </p><br />
             <h2>What Worked Well</h2>
             <h3></h3>
             <h2>What Didn't Work Well</h2>
