clean up and minor update

--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -281,7 +281,7 @@
             <h2>Learning Outcome</h2>
             <h3>jQuery</h3>
             <p>
-
+                aaaaa
             </p><br />
             <h3>Animating with CSS</h3>
             <p>
@@ -295,13 +295,79 @@
                 Web accessibility is kept in mind from the start. I read through WCAG Accessibility Standards and asked
                 around people in the industry what I should consider. The idea from that was to make the webpage
                 colour-blind friendly and reduce mouse use as much as possible. From there we went on with legibility,
-                underlining, grayscale filter and contras toggle button.
+                underlining, grayscale filter and contrast toggle button.
             </p><br />
             <h2>What Worked Well</h2>
             <h3></h3>
             <h2>What Didn't Work Well</h2>
             <h3></h3>
             <h2>Resources</h2>
+            <p>
+                oberlo.com, 'WHAT PERCENTAGE OF INTERNET TRAFFIC IS MOBILE?', 2022. [Online]. Available:
+                https://id.oberlo.com/statistics/mobile-internet-traffic [Accessed: 2-Mar-2023]
+            </p><br />
+            <p>
+                K.Shepard, 'Shiny Hunting Is About To Get Harder In Pokemon Scarlet And Violet', 2023. [Online].
+                Available: https://kotaku.com/pokemon-scarlet-violet-shiny-patch-switch-auto-updates-1850127744
+                [Accessed: 18-Feb-2023]
+            </p><br />
+            <p>
+                S.Jiang, 'Pokémon Fans Think This Elden Ring Mod Looks Better Than Scarlet And Violet', 2023. [Online].
+                Available: https://kotaku.com/pokemon-scarlet-violet-elden-ring-mod-legends-arceus-1849944647 [Accessed:
+                18-Feb-2023]
+            </p><br />
+            <p>
+                E.Gach, 'Massive Pokémon Discord Owner Banned For Allegedly Sexually Preying On Minors', 2023. [Online].
+                Available: https://kotaku.com/pokemon-subreddit-discord-sexual-predator-minors-banned-1850072117
+                [Accessed: 18-Feb-2023]
+            </p><br />
+            <p>
+                T.Fischer, 'Pokemon Scarlet and Violet Leak Reveals Unused Content', 2023. [Online]. Available:
+                https://comicbook.com/gaming/news/pokemon-scarlet-violet-leak/ [Accessed: 18-Feb-2023]
+            </p><br />
+            <p>
+                Archaic, 'St. Baldrick’s Foundation's Catch a Million marathon returns for 2023, asking streamers to
+                catch 1 million Pokémon to support kids cancer research', 2023. [Online]. Available:
+                https://bulbagarden.net/threads/296183 [Accessed: 18-Feb-2023]
+            </p><br />
+            <p>
+                Archaic, 'Use code「1STCHAMPSV」to receive Jiseok Lee's Garganacl in Pokemon Scarlet & Violet until
+                February 20th', 2023. [Online]. Available: https://bulbagarden.net/threads/296173 [Accessed:
+                18-Feb-2023]
+            </p><br />
+            <p>
+                QM96554101, 2.14, 2023. [Online]. Available: https://www.pixiv.net/en/artworks/105548643 [Accessed:
+                18-Feb-2023]
+            </p><br />
+            <p>
+                Pokemon.com, 2023 Oceania VGC International Championships Preview Roundtable, 2023. [Online]. Available:
+                https://www.pokemon.com/us/pokemon-news/2023-oceania-vgc-international-championships-preview-roundtable
+                [Accessed: 19-Feb-2023]
+            </p><br />
+            <p>
+                S.Jiang, Giant Pokemon Scarlet And Violet Patch Tries Fixing Jank By…Spawning Fewer Monsters, 2023.
+                [Online]. Available: https://kotaku.com/pokemon-scarlet-violet-nintendo-switch-bug-patch-1850127808
+                [Accessed: 19-Feb-2023]
+            </p><br />
+            <p>
+                Archaic, 'Patch notes released for Pokémon Scarlet and Violet's Version 1.2.0 update - Update still
+                scheduled for release in late February', 2023. [Online]. Available:
+                https://www.bulbagarden.net/threads/296171 [Accessed:18-Feb-2023]
+            </p><br />
+            <p>
+                gamewith.net, 'Best Pokemon For Tera Raid Battles & Team Raid Tips', 2023. [Online]. Available:
+                https://gamewith.net/pokemon-scarletviolet/article/show/37197 [Accessed:20-Feb-2023]
+            </p><br />
+            <p>
+                game8.co, 'Tera Raid Tips and Battle Mechanics | Pokemon Scarlet and Violet (SV)', 2023. [Online]. Available: https://game8.co/games/Pokemon-Scarlet-Violet/archives/384344 [Accessed:20-Feb-2023]
+            </p><br />
+            <p>
+                bulbapedia, 'Paldea', 2023. [Online]. Available: https://bulbapedia.bulbagarden.net/wiki/Paldea [Accessed:23-Feb-2023]
+            </p><br />
+            <p>
+                Nintendo UK, 'Pokémon Scarlet & Violet - Welcome to the Paldea region! (Nintendo Switch)', 2023. [Online]. Available: https://youtu.be/kdju_9bGMv8 [Accessed:22-Feb-2023]
+            </p><br />
+            
             <h2>Appendix</h2>
         </section>
     </main>
