--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -311,7 +311,7 @@
                     <div class="home-page-bottom-item7">
                         <!-- Introduce the audio element below -->
                         <h3><span>Our Most Popular Soundtrack</span></h3>
-                        <!-- Audio element: taken from official soundtrack. It was freely available for download for a while -->
+                        <!-- Audio element: taken from official soundtrack. It was freely available for download at https://soundlibrary.pokemon.co.jp/ in several countries for limited time -->
                          <div id="soundtrack"><audio controls>
                             <source src="audio/theme.mp3" type="audio/mp3">
                             <!-- Display an error message if the user's browser does not support the audio element -->
