--- a/Final Project/report.html
+++ b/Final Project/report.html
@@ -279,10 +279,6 @@
                 timeline helps in understanding the flow of event.
             </p><br />
             <h2>Learning Outcome</h2>
-            <h3>jQuery</h3>
-            <p>
-                aaaaa
-            </p><br />
             <h3>Animating with CSS</h3>
             <p>
                 Throughout the project, one of the things I have learned is animating with CSS. CSS could be used to
@@ -300,7 +296,10 @@
             <h2>What Worked Well</h2>
             <h3></h3>
             <h2>What Didn't Work Well</h2>
-            <h3></h3>
+            <p>
+                I tried to implement a horizontal timeline for 'company history' but I couldn't decide the design and
+                how it would adapt to screensize so I dropped the idea.
+            </p><br />
             <h2>Resources</h2>
             <p>
                 oberlo.com, 'WHAT PERCENTAGE OF INTERNET TRAFFIC IS MOBILE?', 2022. [Online]. Available:
@@ -359,15 +358,17 @@
                 https://gamewith.net/pokemon-scarletviolet/article/show/37197 [Accessed:20-Feb-2023]
             </p><br />
             <p>
-                game8.co, 'Tera Raid Tips and Battle Mechanics | Pokemon Scarlet and Violet (SV)', 2023. [Online]. Available: https://game8.co/games/Pokemon-Scarlet-Violet/archives/384344 [Accessed:20-Feb-2023]
+                game8.co, 'Tera Raid Tips and Battle Mechanics | Pokemon Scarlet and Violet (SV)', 2023. [Online].
+                Available: https://game8.co/games/Pokemon-Scarlet-Violet/archives/384344 [Accessed:20-Feb-2023]
             </p><br />
             <p>
-                bulbapedia, 'Paldea', 2023. [Online]. Available: https://bulbapedia.bulbagarden.net/wiki/Paldea [Accessed:23-Feb-2023]
+                bulbapedia, 'Paldea', 2023. [Online]. Available: https://bulbapedia.bulbagarden.net/wiki/Paldea
+                [Accessed:23-Feb-2023]
             </p><br />
             <p>
-                Nintendo UK, 'Pokémon Scarlet & Violet - Welcome to the Paldea region! (Nintendo Switch)', 2023. [Online]. Available: https://youtu.be/kdju_9bGMv8 [Accessed:22-Feb-2023]
+                Nintendo UK, 'Pokémon Scarlet & Violet - Welcome to the Paldea region! (Nintendo Switch)', 2023.
+                [Online]. Available: https://youtu.be/kdju_9bGMv8 [Accessed:22-Feb-2023]
             </p><br />
-            
             <h2>Appendix</h2>
         </section>
     </main>
